tests/positive/module_name_collision.ax
module module_name_collision;

import collide.a;

fn helper(value: i32) -> i32 {
    return value + 100;
}

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return helper(0) - 100;
}
