tests/negative/cyclic_import.ax
module cyclic_import;

import cycle.a;

export c fn main(argc: i32, argv: *mut *mut u8) -> i32 {
    return 0;
}
